--- a/main.css
+++ b/main.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+    font-family: Arial;
+}
 .fw-100 {
     /*font-weight: 1000;*/
     font-size: 25px;
@@ -8,10 +13,136 @@
 .line2 {
     margin-top: 20px;
 }
+
+p {
+    margin: 10px 5px 0px 10px;
+    font-size: 18px;
+}
 a {
-    color: #9b1919;
+    color: #7e0303;
     text-decoration: none;
+    font-size: 18px;
+    margin: 0 10px 0 0;
 }
 .line3 {
     margin-top: 20px;
+}
+
+
+.card {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    background-size: auto;
+    background-color: white;
+    background-image: url(""); 
+    width: 500px;
+    margin: 50px auto;
+    border-radius: 15px;
+    padding: 20px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 15px;
+}
+
+.card:hover {
+    transform: scale(1.05);
+    transition: 0.3s;
+}
+
+.card h3 {
+    margin: 8px;
+    font-size: 22px;
+
+}
+
+.card .info {
+    margin: 8px;
+    color: rgb(90, 90, 90);
+}
+
+.card .price {
+    margin: 10px;
+    font-weight: bold;
+    font-size: 24px;
+    color: #2c3e50;
+}
+
+.card .old-price {
+    font-size: 14px;
+    text-decoration: line-through;
+    color: #e74c3c;
+    margin-left: 10px;
+    font-size: 20px;
+    
+}
+
+.card img {
+    /* width: max-content; */
+    border-radius: 10px;
+    justify-content: center;
+    position: a;
+    
+}
+
+.card .button {
+    padding: 10px 20px;
+    background: linear-gradient(to left, #3498db, #2ecc71);
+    color: white;
+    border-radius: 5px;
+    text-decoration: none;
+    margin-top: 10px auto;
+    padding: 10px 20px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.card .button:active {
+    background: linear-gradient(to left, #2ecc71, #3498db);
+     transition: opacity(0.3);
+}
+
+.card .button:hover {
+    color: #2c3e50;
+    transition: 0.3s;
+    opacity: 0.8;
+    transition: opacity(0.3);
+}
+body {
+    background-color: #f5f5f5;
+}
+
+.icon {
+    cursor: pointer;      
+    position: relative;
+    top: 20px;
+    left: 380px;
+}
+
+.menu {
+    display: block;
+    margin: 10px 10px 10px 10px;
+}
+
+#clock {
+    margin: 10px 10px 10px;
+    font-size: 24px;
+    width: 30%;
+    height: auto;
+    padding: 10px;
+    background-color: rgb(247, 235, 194);
+    border: solid 2px;
+    border-radius: 5px;
+    border-color: rgb(70, 34, 0)0;
+    color: rgb(121, 55, 1);
+    text-align: center; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.CL {
+    display: block;
+    width: 40%;
+    height: max-content;
+    display: inline-block;
+    
 }
